erDiagram
    %% Modular monolith physical persistence model.
    %% Each module owns its DbContext and migrations. Cross-module references are scalar IDs unless noted.

    AspNetUsers {
        Guid Id PK
        string UserName
        string Email
        string PhoneNumber
    }

    AspNetRoles {
        Guid Id PK
        string Name
    }

    AspNetUserRoles {
        Guid UserId FK
        Guid RoleId FK
    }

    RefreshTokens {
        Guid Id PK
        string RefreshToken
        DateTime Expiration
        string PreviousRefreshToken
        DateTime PreviousExpiration
        Guid UserId FK
    }

    Vehicles {
        Guid Id PK
        Guid UserId "logical user id"
        string Make
        string Model
        decimal BatteryCapacity
    }

    VehicleConnectors {
        Guid Id PK
        Guid VehicleId FK
        Guid ConnectorId "logical connector id"
    }

    DataProtectionKeys {
        int Id PK
        string FriendlyName
        string Xml
    }

    Companies {
        Guid Id PK
        jsonb Name
        string ContactEmail
        string ContactPhone
        string Slug UK
        bool IsActive
    }

    AppUserCompanies {
        Guid Id PK
        Guid AppUserId "logical user id"
        Guid CompanyId FK
        ECompanyRole Role
        bool IsActive
        DateTime JoinedAtUtc
    }

    Promotions {
        Guid Id PK
        string Code
        decimal DiscountValue
        DateTime ValidFrom
        DateTime ValidTo
        bool IsActive
        Guid CompanyId FK "nullable for system promotions"
    }

    UserPromotions {
        Guid Id PK
        Guid UserId "logical user id"
        Guid PromotionId FK
        DateTime AddedAt
        bool IsUsed
    }

    AuditLogs {
        Guid Id PK
        Guid CompanyId FK
        string UserName
        string EntityName
        Guid EntityId
        string Action
        DateTime AtUtc
        string ChangesJson
    }

    ChargingStations {
        Guid Id PK
        jsonb Name
        string Location
        EStationStatus Status
        decimal PricePerHour "domain property PricePerKwh"
        decimal MaxPower
        bool IsActive
        Guid CompanyId "logical company id, nullable"
    }

    Connectors {
        Guid Id PK
        jsonb Name
        bool IsActive
    }

    ChargingStationConnectors {
        Guid Id PK
        Guid ChargingStationId FK
        Guid ConnectorId FK
    }

    Reservations {
        Guid Id PK
        Guid UserId "logical user id"
        Guid ChargingStationId FK
        DateTime StartTime
        DateTime EndTime
        DateTime ExpiresAtUtc
        DateTime CancelledAtUtc
        decimal EstimatedCost
        EReservationStatus Status
        Guid PromotionId "logical promotion id, nullable"
    }

    ChargingSessions {
        Guid Id PK
        Guid UserId "logical user id"
        Guid ChargingStationId FK
        Guid ReservationId FK "nullable"
        Guid PromotionId "logical promotion id, nullable"
        DateTime StartTime
        DateTime EndTime
        decimal EnergyConsumed
        decimal Cost
    }

    Maintenances {
        Guid Id PK
        Guid ChargingStationId FK
        Guid ReportedByUserId "logical user id, nullable"
        string IssueDescription
        EMaintenanceStatus Status
        DateTime ReportedAt
        DateTime ResolvedAt
        Guid AssignedToUserId "logical user id, nullable"
        string Notes
    }

    AspNetUsers ||--o{ RefreshTokens : owns
    AspNetUsers ||--o{ AspNetUserRoles : has
    AspNetRoles ||--o{ AspNetUserRoles : assigned
    AspNetUsers ||..o{ Vehicles : logical_owner

    Vehicles ||--o{ VehicleConnectors : has
    VehicleConnectors }o..|| Connectors : logical_connector

    Companies ||--o{ AppUserCompanies : has_members
    AspNetUsers ||..o{ AppUserCompanies : logical_user
    Companies ||--o{ Promotions : offers
    Promotions ||--o{ UserPromotions : assigned_to_users
    AspNetUsers ||..o{ UserPromotions : logical_user
    Companies ||--o{ AuditLogs : records

    Companies ||..o{ ChargingStations : logical_owner
    ChargingStations ||--o{ ChargingStationConnectors : has
    Connectors ||--o{ ChargingStationConnectors : supports
    ChargingStations ||--o{ Reservations : accepts
    ChargingStations ||--o{ ChargingSessions : hosts
    ChargingStations ||--o{ Maintenances : has_issues
    Reservations ||--o{ ChargingSessions : source_for

    AspNetUsers ||..o{ Reservations : logical_user
    AspNetUsers ||..o{ ChargingSessions : logical_user
    AspNetUsers ||..o{ Maintenances : logical_reporter_or_assignee
    Promotions ||..o{ Reservations : logical_discount
    Promotions ||..o{ ChargingSessions : logical_discount
